# UNI_lab

./: README.md
aads/aads/lab_5/: CMakeLists.txt  Makefile  create_matrix.c  matrix.h
aads/lab_5/: CMakeLists.txt  Makefile  bench  bench.c  create_matrix.c  matrix.c  matrix.h  result  thresholds.h  valgrind-out.txt
aads/lab_5/matrices/: A_bad.txt  B_bad.txt  big_A.txt  big_B.txt  check_A  check_B  complex_a  complex_b  hess_A  matrix_a  matrix_b  norm_check_A  norm_check_B  norm_complex_a  norm_complex_b  triag_B
